istio/enforce-tls-hosts-host-subnets/dr-bad.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: bad-dr01
spec:
  host: ratings.prod.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: LEAST_REQUEST
    tls:
      mode: DISABLE
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: bad-dr02
spec:
  host: ratings.prod.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
