istio/enforce-tls-hosts-host-subnets/99-delete.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
delete:
- apiVersion: kyverno.io/v1
  kind: ClusterPolicy
  name: enforce-tls-hosts-host-subnets
